[gd_scene load_steps=5 format=3 uid="uid://dbj46bo0tc5n5"]

[ext_resource type="Texture2D" uid="uid://bodtmlgghv5fg" path="res://assets/canon/CanÌƒon_quieto.png" id="1_81842"]
[ext_resource type="Script" uid="uid://dsv3nhy0glpbh" path="res://Scripts/cannon.gd" id="1_qlvt6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb3vm"]
size = Vector2(431, 452)

[sub_resource type="CircleShape2D" id="CircleShape2D_qayxd"]
radius = 1556.3578

[node name="Cannon" type="StaticBody2D" groups=["Building"]]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_qlvt6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-31.5, 20)
shape = SubResource("RectangleShape2D_jb3vm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_81842")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_qayxd")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
